# ger

./: .clang-format  .gitignore  .gitmodules  .rustfmt.toml  CMakeLists.txt  Cargo.toml  NOTES  PLAN.org  README.md  conanfile.txt  rustfmt.toml  todo.txt
capnp/: CMakeLists.txt
capnp/gerrit/: accounts.capnp  changes.capnp
capnp/util/: listmap.capnp  listmap_handler.h
capnproto/: CMakeLists.txt
capnproto/gerrit/: changes.capnp
cmake/: Abseil.cmake.in  ArgParse.cmake  Dependencies.cmake.in  FMT.cmake.in  GSL.cmake  GSL.cmake.in  GTest.cmake.in  GoogleTest.cmake  Project.cmake.in  Testing.cmake.in
ger-cli/: CMakeLists.txt
ger-cli/include/ger/cli/: command.h  commands.h  config.h  gercli.h
ger-cli/src/: CMakeLists.txt  change_cmd.cc  config.cc  gercli.cc  main.cc
ger-cli/test/: CMakeLists.txt  ger.yml  template.tpl
ger-lib/: CMakeLists.txt
ger-lib/include/ger/lib/: change.h
ger-lib/src/: CMakeLists.txt  change.cc
ger-lib/test/: CMakeLists.txt
gerlib/: CMakeLists.txt
gerlib/capnp/: CMakeLists.txt
gerlib/capnp/gerrit/: changes.capnp
gerlib/capnp/util/: listmap.capnp
gerlib/include/ger/: json.h
gerlib/src/: CMakeLists.txt  change.cc  json.cc
gerlib/test/: CMakeLists.txt  dummy.cc  json.cc
include/ger/: ger.h
include/ger/cli/: commands.h  ger_cli.h
include/ger/client/: change.h
include/gerritc/: gerrit.h
protobuf/: CMakeLists.txt
protobuf/gerrit/: accounts.proto  change.proto  changes.proto
src/: CMakeLists.txt  cli.rs  cli.yml  config.rs  ger.cc  gerrit.cc  handler.rs  main.cc  main.rs
src/cli/: change_cmd.cc  ger.cc  ger_cli.cc  main.cc
src/client/: change.cc
src/commands/: mod.rs  project.rs
src/commands/browser/: home.rs  mod.rs  table.rs  user_input.rs
src/commands/change/: abandon.rs  create.rs  dashboard.rs  list.rs  mod.rs  show.rs  submit.rs  topic.rs
src/commands/remote/: add.rs  default.rs  mod.rs  remove.rs  rename.rs  show.rs
src/commands/ui/: home.rs  mod.rs  table.rs  user_input.rs
src/commands/ui/util/: event.rs
src/gerlib/: accounts.rs  changes.rs  details.rs  error.rs  handler.rs  http.rs  interface.rs  lib.rs  projects.rs  rest.rs
src/gerlib/rest/: changes.rs  error.rs  handler.rs  http.rs  mod.rs  projects.rs  rest.rs
src/ui/: box.rs  browser.rs  change.rs  demo.rs  draw.rs  ecs_tui.rs  layout.rs  list.rs  main.rs  mod.rs  rect.rs  scroll.rs  table.rs  term.rs  winbox.rs
src/ui/draw/: mod.rs  table.rs  winbox.rs
src/util/: mod.rs  validate.rs
test/: CMakeLists.txt  command.cc  ger.yml  test.cc
