[package]
name = "ger"
version = "0.1.0"
authors = ["Natanael Rabello <natanael.rabello@outlook.com>"]
edition = "2018"

[dependencies]
simple-error = "0.2.1"
ansi_term = "0.12"
chrono = { version = "0.4.9", features = ["serde"] }
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
toml = "0.5"
failure = "0.1.6"
exitfailure = "0.5.1"
hyper = "0.12"
curl = "0.3.11"

[dependencies.clap]
version = "2.33.0"
default-features = true
features = [ "wrap_help", "yaml" ]

[lib]
name = "gerlib"
path = "src/gerlib/lib.rs"

[[bin]]
name = "ger"
path = "src/bin/ger/main.rs"