[package]
name = "ger"
version = "0.1.0"
authors = ["Natanael Rabello <natanael.rabello@outlook.com>"]
repository = "https://github.com/natanaeljr/ger"
readme = "README.md"
description = "Gerrit command-line interface"
edition = "2018"

[dependencies]
gerlib = { path = "../gerlib" }
simple-error = "0.2.1"
ansi_term = "0.12"
chrono = { version = "0.4.9", features = ["serde"] }
clap = { version = "2.33.0", features = ["wrap_help", "yaml"], default-features = true }
serde = "1.0.102"
serde_derive = "1.0.102"
toml = "0.5"
failure = "0.1.6"
exitfailure = "0.5.1"
curl = "0.4.25"
dirs = "2.0.2"
log = "0.4.8"
pretty_env_logger = "0.3.1"
termcolor = "1.0.5"
atty = "0.2.14"
term_size = "1.0.0-beta1"
rpassword = "4.0"
strum = "0.17.1"
strum_macros = "0.17.1"
tui = "0.9.5"
termion = "1.5"
rand = "0.7"
unicode-width = "0.1"

[dev-dependencies]
tempfile = "3.1.0"
