cmake_minimum_required(VERSION 3.0)
project(ger-lib LANGUAGES CXX)

#########################################################################################
# Project
#########################################################################################
include_directories(${GERLIB_INCLUDE_DIR})
add_subdirectory(src)

#########################################################################################
# Testing
#########################################################################################
if(BUILD_TESTING)
  add_subdirectory(test)
endif()